--- a/.github/workflows/master_app-service-portfolio-dev.yml
+++ b/.github/workflows/master_app-service-portfolio-dev.yml
@@ -60,9 +60,11 @@ jobs:
         with:
           app-name: 'app-service-portfolio-dev'
           slot-name: 'Production'
-          package: ./dist
+          package: ./node-app
+          
 
           
+
 
 
 
