--- a/.github/workflows/master_app-service-portfolio-dev.yml
+++ b/.github/workflows/master_app-service-portfolio-dev.yml
@@ -46,7 +46,11 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: node-app
-      
+      - name: Vérifier le contenu après téléchargement artefact
+        run: |
+          pwd
+          ls -la
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -64,6 +68,7 @@ jobs:
           
 
           
+
 
 
 
