--- a/.github/workflows/master_app-service-portfolio-dev.yml
+++ b/.github/workflows/master_app-service-portfolio-dev.yml
@@ -32,7 +32,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: ./dist
+          path: ./
 
   deploy:
     runs-on: ubuntu-latest
@@ -68,6 +68,7 @@ jobs:
           
 
           
+
 
 
 
