--- a/.github/workflows/master_app-service-portfolio-dev.yml
+++ b/.github/workflows/master_app-service-portfolio-dev.yml
@@ -32,7 +32,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: ./
+          path: ./dist
 
   deploy:
     runs-on: ubuntu-latest
@@ -64,7 +64,7 @@ jobs:
         with:
           app-name: 'app-service-portfolio-dev'
           slot-name: 'Production'
-          package: ./node-app
+          package: ./
           
 
           
